// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the first review 1`] = `
<styled.div
  isComment={false}
>
  <styled.div>
    <styled.img
      src="https://s3.amazonaws.com/uifaces/faces/twitter/fabbianz/128.jpg"
    />
    <styled.div>
      <styled.div>
         
        Mittie
      </styled.div>
      <styled.div>
        December
         
        2020
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div
    isComment={false}
  >
    <styled.div>
      Accusamus eos quia est occaecati rerum. Et amet excepturi voluptatibus in incidunt quibusdam. Velit expedita rerum ea et minima culpa rerum. Rerum aut facilis similique illum repud...
    </styled.div>
    <styled.button
      onClick={[Function]}
    >
      read more
    </styled.button>
  </styled.div>
</styled.div>
`;

exports[`should render the first review that has a comment 1`] = `
<styled.div
  isComment={false}
  modal={true}
>
  <styled.div>
    <styled.img
      src="https://s3.amazonaws.com/uifaces/faces/twitter/foczzi/128.jpg"
    />
    <styled.div>
      <styled.div>
         
        Annamarie
      </styled.div>
      <styled.div>
        December
         
        2020
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div
    isComment={false}
  >
    <styled.div>
      Qui quaerat velit voluptas sit ipsa voluptatem sequi eius distinctio. Repellat incidunt aut. Omnis delectus necessitatibus molestiae voluptates officiis. Dolores aut vero esse quod...
    </styled.div>
    <styled.button
      onClick={[Function]}
    >
      read more
    </styled.button>
  </styled.div>
  <ReviewsListItem
    isComment={true}
    key="5fb45c0bbce68d3c67535fee"
    modal={true}
    review={
      Object {
        "__v": 0,
        "_id": "5fb45c0bbce68d3c67535fee",
        "author": Object {
          "__v": 0,
          "_id": "5fb45c0abce68d3c67535e58",
          "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/nicoleglynn/128.jpg",
          "id": "5fb45c0abce68d3c67535e58",
          "username": "Lexi",
        },
        "content": "Possimus aut aut deleniti nihil odio ut. Sint reiciendis dolor tempora corrupti delectus vel itaque in. Accusamus ut sunt. Omnis eum dolor fugit quo. Animi officia occaecati nesciunt et. Neque voluptatum aperiam in molestiae.",
        "createdAt": "2020-12-01T06:00:00.000Z",
        "id": "5fb45c0bbce68d3c67535fee",
        "review": "5fb45c0abce68d3c67535e73",
      }
    }
  />
</styled.div>
`;
